# gpu-amr

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  LICENSE  Manifest.toml  Project.toml  README.md  WS-1-results.md  WS-2-results.md  WS-3-results.md  compile_flags.txt  config.yaml  error_norms_compare.py  halo.diff  halo.patch  ideas.txt  lsan.supp  plan_parallelization.md  rho_N20.txt  test_basis  tree.md
benchmark/: CMakeLists.txt  amr_reshape_benchmark.b.cpp  bench_fvm_solver_integration.b.cpp  bench_fvm_solver_integration3D.b.cpp  bench_fvm_solver_integrationTest.b.cpp  bench_fvm_solver_integration_active_amr.b.cpp  bench_fvm_solver_integration_newtest.b.cpp  bench_fvm_solver_integration_test.b.cpp  sorting_benchmark.b.cpp
cmake/: AddGroup.cmake  amr_compiler_options.cmake
cmake/architecture/: todo.txt
cmake/compiler/: clang-flags.cmake  gcc-flags.cmake  nvc++-flags.cmake
cmake/functions/: GenerateConfig.cmake
cmake/toolchain/: clang.cmake  gcc.cmake  nvcc.cmake
config/: config.yaml
docs/: COMPILE_TIME_API.md  DIRECTION_SYSTEM_EXPLANATION.md  first-steps.md
docs/assignments/: worksheet1.md  worksheet2.md  worksheet3.md  worksheet4.md
docs/src/: index.md
example_cases/ChannelWithBFS/: ChannelWithBFS.pgm
example_cases/ChannelWithObstacle/: ChannelWithObstacle.pgm
example_cases/NaturalConvection/: NaturalConvection.pgm
examples/: CMakeLists.txt  advection_amr_error.e.cpp  balancing_example.e.cpp  balancing_tree_a.e.cpp  balancing_tree_a.ed.cpp  basis_test.cpp  benchmark_fvm_solver_integration.b.cpp  container_operations.e.cpp  dg_advanced_printer_demo.e.cpp  dg_basis_test.e.cpp  dg_equation_test.e.cpp  dg_main_loop.e.cpp  dynamic_amr.e.cpp  dynamic_amr.ed.cpp  flat_ndtree.e.cpp  flat_ndtree.ed.cpp  fvm_solver_advection.e.cpp  fvm_solver_advection.ed.cpp  fvm_solver_integration.cpp  fvm_solver_integration.e..cpp  fvm_solver_integration.e.cpp  fvm_solver_integration3D.e.cpp  fvm_solver_integration3D.ed.cpp  fvm_solver_integration_3D.e.cpp  fvm_solver_integration_gpu.e.cpp  ideas.txt  layout_patch_index.e.cpp  layout_patch_index.ed.cpp  main.cpp  matrix_operations.e.cpp  matrix_operations.ed.cpp  morton_example_2d.e.cpp  morton_example_3d.e.cpp  morton_id_example.e.cpp  morton_neighbor_search.e.cpp  morton_tree.e.cpp  patch_index.e.cpp  space_partition.e.cpp  space_refine_auto.e.cpp  tensor_alorithms.e.cpp  (+10 more)
include/: Case.hpp  Datastructures.hpp  Discretization.hpp  Fields.hpp  PressureSolver.hpp  Utils.hpp  boundary.hpp  config.hpp  data_types.hpp  domain.hpp  morton_id.hpp  ndcell.hpp  ndconcepts.hpp  ndtree.hpp  print_tree.hpp  refinement_kernels.hpp  tree.hpp  tree_types.hpp  updateFVM.hpp
include/Utility/: stopwatch.hpp
include/_reference_impl/: ndboundary.hpp  ndbox.hpp  ndt_concepts.hpp  ndtree.hpp
include/allocators/: allocator_concepts.hpp  allocator_types.hpp  allocator_utils.hpp  buffer_allocator.hpp  free_list_buffer_allocator.hpp
include/config/: definitions.hpp  generated_config.hpp
include/containers/: container_algorithms.hpp  container_concepts.hpp  container_functions.hpp  container_manipulations.hpp  container_operations.hpp  container_traits.hpp  container_utils.hpp  continaer_utils.hpp  loop_control.hpp  multi_index.hpp  notes.delete  static_layout.hpp  static_matrix.hpp  static_shape.hpp  static_tensor.hpp  static_vector.hpp
include/cuda/: device_buffer.hpp  fvm_refinement_criterion.hpp  fvm_time_step.hpp  halo_exchange.hpp  intergrid_transfer.hpp  permutation.hpp  profiler.hpp
include/detail/: type_traits.hpp
include/dg_helpers/: basis.hpp  dof_exporter.hpp  equations.hpp  error_evaluator.hpp  globals.hpp  globals_old.hpp  rhs.hpp  scenario.hpp  solver.hpp  surface.hpp  time.hpp  tree_builder.hpp  volume.hpp
include/morton/: morton.hpp  morton2d.hpp  morton3d.hpp  morton_id.hpp
include/ndtree/: block_storage.hpp  flat_ndtree.hpp  ideas.txt  intergrid_operator.hpp  morton_tree.hpp  ndconcepts.hpp  ndhierarchy.hpp  ndtree.hpp  ndtype_traits.hpp  ndutils.hpp  neighbor.hpp  neighbours.patch  patch.hpp  patch_layout.hpp  patch_utils.hpp  print_dg_tree.hpp  print_dg_tree_2d.hpp  print_dg_tree_advanced.hpp  print_dg_tree_fixed.hpp  print_dg_tree_old.hpp  print_dg_tree_v2.hpp  print_tree_a.hpp  structured_print.hpp  todo.txt  vtk_print.hpp
include/refinement/: refinement2d.hpp
include/solver/: AdvectionPhysics.hpp  EulerPhysics.hpp  EulerSolver2D.hpp  EulerSolverND.cpp  EulerSolverND.hpp  (+11 more)
morton/: morton.hpp
organization/: ______example__code_style.md  coding_standars.md  organization.md  questions.md  to_be_discussed.md
output/: plot.pvd  plot_0.vtu  plot_1.vtu  plot_10.vtu  plot_11.vtu  plot_12.vtu  plot_13.vtu  plot_14.vtu  plot_15.vtu  plot_16.vtu  plot_17.vtu  plot_18.vtu  plot_19.vtu  plot_2.vtu  plot_20.vtu  plot_21.vtu  plot_22.vtu  plot_23.vtu  plot_24.vtu  plot_25.vtu  plot_26.vtu  plot_27.vtu  plot_28.vtu  plot_29.vtu  plot_3.vtu  plot_30.vtu  plot_31.vtu  plot_32.vtu  plot_33.vtu  plot_34.vtu  plot_35.vtu  plot_36.vtu  plot_37.vtu  plot_38.vtu  plot_39.vtu  plot_4.vtu  plot_40.vtu  plot_5.vtu  plot_6.vtu  plot_7.vtu  (+2 more)
reports/: performance.log.md  profile.13-12-25.log.md  remove_sorting.md
src/: Case.cpp  EulerFVM_Quad.cpp  EulerSolver2D.cpp  EulerSolver2D.h  Fields.cpp  PressureSolver.cpp  TerraDG.jl  TerraDGG.jl  TerraDG_sleep.jl  acoustic.yaml  advection.yaml  basis.jl  configuration.jl  equations.jl  error_writer.jl  global_matrices.jl  grid.jl  main.cpp  main.jl  plotters.jl  sibson.yaml  test_octants.cpp  test_quadrants.cpp  test_sod.cpp  updateFVM.cpp
test/: runtests.jl
tests/: CMakeLists.txt  advection_equation_amr.t.cpp  advection_equation_amr.test.cpp  static_shape.t.cpp
tools/: check-format  fix_vtk_format.py  fix_vtk_point_data.py  generate_pvd.py  json_to_vtk.py  post_process.py
vtk_output/: euler_tree_iteration_0.vtk  euler_tree_iteration_1.vtk  euler_tree_iteration_2.vtk  euler_tree_iteration_3.vtk  euler_tree_iteration_4.vtk  euler_tree_iteration_5.vtk  euler_tree_iteration_6.vtk  euler_tree_iteration_7.vtk  euler_tree_iteration_8.vtk
(+64 files in other folders)
